# WorkspaceTree

./: CMakeCache.txt  CMakeLists.txt  DeleteBranch.cpp  Makefile  WorkspaceNode.cpp  WorkspaceNode.h  WorkspaceNodeUnitTesting.cpp  WorkspaceTree  WorkspaceTree.cpp  WorkspaceTree.h  a.out  cmake_install.cmake  main.cpp  reusablecode.cpp  search_in_tree_or_branch.cpp  string_node.cpp  string_node.h
include/: WorkspaceNode.h
src/: WorkspaceNode.cpp  main.cpp
